RESOLVED FIXED69219
[Soup] Somet tests fail with FAIL Unexpected response data received: Wrong method: GET
https://bugs.webkit.org/show_bug.cgi?id=69219
Summary [Soup] Somet tests fail with FAIL Unexpected response data received: Wrong me...
Martin Robinson
Reported 2011-10-01 19:15:15 PDT
In particular this is causing a bunch of File API and blob tests to fail.
Attachments
Patch (3.21 KB, patch)
2011-11-16 10:17 PST, Sergio Villar Senin
mrobinson: review+
Sergio Villar Senin
Comment 1 2011-11-16 09:12:57 PST
Looks like this could be fixable if we don't stop adding blob data to the message body if one of them fails. For example in the case of http/tests/local/blob/send-hybrid-blob.html the test tries to attach some file that does not exist. If we go on trying to append the rest of the data then the test works fine. There is only one more test in the Skipped file for this particular issue Martin, but you talk about a bunch of them. Do they require the Filesystem API to run?
Martin Robinson
Comment 2 2011-11-16 09:48:31 PST
I guess there are only two of them. :)
Sergio Villar Senin
Comment 3 2011-11-16 10:17:07 PST
Sergio Villar Senin
Comment 4 2011-11-16 10:18:32 PST
Looks like Mac port also ignores in between failures, see setHTTPBody() in FormDataStreamMac.mm
Martin Robinson
Comment 5 2011-11-16 10:55:41 PST
Comment on attachment 115403 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=115403&action=review Thanks! addEncodedBlobToSoupMessageBody and addEncodedBlobItemToSoupMessageBody now always return true. When landing please change their return type to void to express that. > LayoutTests/platform/gtk/Skipped:1536 > +# Fails because it does not throw a couple of expected exceptions Might want to open a bug for this.
Sergio Villar Senin
Comment 6 2011-11-16 12:12:59 PST
Note You need to log in before you can comment on or make changes to this bug.