[Soup] Somet tests fail with FAIL Unexpected response data received: Wrong method: GET https://bugs.webkit.org/show_bug.cgi?id=69219

Reviewed by Martin Robinson.

Source/WebCore:

Do not stop appending data to the request body if any of the blob
items to upload is not accesible.

* platform/network/soup/ResourceHandleSoup.cpp:
(WebCore::addEncodedBlobToSoupMessageBody):

LayoutTests:

Unskipped a test that now pass.

* platform/gtk/Skipped: unskipped http/tests/local/blob/send-hybrid-blob.html

Canonical link: https://commits.webkit.org/89012@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@100486 268f45cc-cd09-0410-ab3c-d52691b4dbfc